# Qt-scope-control

./: .clang-format  .gitignore  DEVELOPMENT_NOTES.md  LICENSE  README.md  git_setup.sh
docs/: Doxyfile
docs/html/: CommandParser_8hpp_source.html  InstrumentControl_8hpp_source.html  annotated.html  classCommandParser_1_1CommandParser-members.html  classCommandParser_1_1CommandParser.html  classInstrumentControl_1_1InstrumentControl-members.html  classInstrumentControl_1_1InstrumentControl.html  classMainWindow-members.html  classMainWindow.html  classQTextEditSink-members.html  classQTextEditSink.html  classes.html  dir_04ae54195ab40527169e5129662719ef.html  dir_18ddfe1c8656e9391601efd62f39bd03.html  dir_8ffcefca1b937ae3563011fc60168bb6.html  dir_ccc309a41fcc5c2f7ee5d6fbf48ce407.html  dir_cf8e49a36f03cfb417c650d638bc99ab.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_e3989824b2b54ed2666713c96c3b3bbb.html  dir_f8140de956de1d3d5a52826cc1cffc86.html  doxygen_crawl.html  files.html  hierarchy.html  index.html  mainwindow_8h_source.html  oscilloscope__utils_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_3.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js
docs/latex/: CommandParser_8hpp_source.tex  InstrumentControl_8hpp_source.tex  annotated.tex  classCommandParser_1_1CommandParser.tex  classInstrumentControl_1_1InstrumentControl.tex  classMainWindow.tex  classQTextEditSink.tex  files.tex  hierarchy.tex  index.tex  mainwindow_8h_source.tex  oscilloscope__utils_8h_source.tex  refman.tex
githooks/: pre-commit
modules/: CMakeLists.txt  CMakeUserPresets.json  build_and_run.bat  build_and_run.sh
modules/CommandParser/: CMakeLists.txt  commands_keysight.yml  commands_tek_tds3000.yml  commands_template.yml
modules/CommandParser/backup/: commands.yml  commands.yml.bak
modules/CommandParser/inc/: CommandParser.hpp
modules/CommandParser/src/: CommandParser.cpp
modules/InstrumentControl/: CMakeLists.txt
modules/InstrumentControl/inc/: InstrumentControl.hpp
modules/InstrumentControl/src/: InstrumentControl.cpp
modules/OscilloscopeGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscope_utils.cpp  oscilloscope_utils.h
